--- a/umap/static/umap/locale/es.json
+++ b/umap/static/umap/locale/es.json
@@ -70,7 +70,7 @@
     "color": "color",
     "Comma separated list of numbers, including min and max values.": "Lista de números separados por comas, incluyendo valores mínimos y máximos.",
     "Comma separated list of properties to use for sorting features. To reverse the sort, put a minus sign (-) before. Eg. mykey,-otherkey.": "Lista de propiedades separadas por comas para ordenar elementos. Para invertir el orden, coloca un signo menos (-) antes. Ej. miclave,-otraclave.",
-    "Comma, tab or semi-colon separated values. SRS WGS84 is implied. Only Point geometries are imported. The import will look at the column headers for any mention of «lat» and «lon» at the beginning of the header, case insensitive. All other column are imported as properties.": "Comma, tab or semi-colon separated values. SRS WGS84 is implied. Only Point geometries are imported. The import will look at the column headers for any mention of «lat» and «lon» at the beginning of the header, case insensitive. All other column are imported as properties.",
+    "Comma, tab or semi-colon separated values. SRS WGS84 is implied. Only Point geometries are imported. The import will look at the column headers for any mention of «lat» and «lon» at the beginning of the header, case insensitive. All other column are imported as properties.": "Valores separados por coma, tabulación o punto y coma. Se asume el SRS WGS84. Solo se importan geometrías de tipo Punto. La importación buscará en los encabezados de las columnas cualquier mención a «lat» y «lon» al comienzo del encabezado, sin distinción entre mayúsculas y minúsculas. Todas las demás columnas se importan como propiedades.",
     "Congratulations, your map has been created!": "¡Felicidades, tu mapa ha sido creado!",
     "Continue line": "Línea continua",
     "Coordinates": "Coordenadas",
@@ -639,16 +639,16 @@
     "See on Wikipedia": "Ver en Wikipedia",
     "Anonymous map: update who can see and edit it": "Mapa anónimo: actualiza quién puede verlo y editarlo",
     "Login": "Iniciar sesión",
-    "Manage filters": "Manage filters",
-    "Map (all layers)": "Map (all layers)",
-    "Add a filter for this field": "Add a filter for this field",
-    "Short text": "Short text",
-    "Text": "Text",
-    "Number": "Number",
-    "Date": "Date",
-    "Date and time": "Date and time",
-    "List of values": "List of values",
-    "Yes / No": "Yes / No",
-    "Select field to compute intensity": "Select field to compute intensity",
-    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
+    "Manage filters": "Administrar filtros",
+    "Map (all layers)": "Mapa (todas las capas)",
+    "Add a filter for this field": "Agregar un filtro para este campo",
+    "Short text": "Texto corto",
+    "Text": "Texto",
+    "Number": "Número",
+    "Date": "Fecha",
+    "Date and time": "Fecha y hora",
+    "List of values": "Lista de valores",
+    "Yes / No": "Sí / No",
+    "Select field to compute intensity": "Seleccionar campo para calcular intensidad",
+    "Optional intensity field to compute heatmap": "Campo de intensidad opcional para calcular el mapa de calor"
 }
