--- a/umap/static/umap/locale/pl.json
+++ b/umap/static/umap/locale/pl.json
@@ -650,5 +650,6 @@
     "List of values": "List of values",
     "Yes / No": "Yes / No",
     "Select field to compute intensity": "Select field to compute intensity",
-    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
+    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap",
+    "All layers": "All layers"
 }
