--- a/umap/static/umap/locale/zh_TW.json
+++ b/umap/static/umap/locale/zh_TW.json
@@ -70,7 +70,7 @@
     "color": "色彩",
     "Comma separated list of numbers, including min and max values.": "用逗號分隔數字，包括最小與最大值。",
     "Comma separated list of properties to use for sorting features. To reverse the sort, put a minus sign (-) before. Eg. mykey,-otherkey.": "用逗號分隔屬性清單來排序圖徵。要保存排序，在槊面加上減號 (-1)，例如 mykey,-otherkey。",
-    "Comma, tab or semi-colon separated values. SRS WGS84 is implied. Only Point geometries are imported. The import will look at the column headers for any mention of «lat» and «lon» at the beginning of the header, case insensitive. All other column are imported as properties.": "Comma, tab or semi-colon separated values. SRS WGS84 is implied. Only Point geometries are imported. The import will look at the column headers for any mention of «lat» and «lon» at the beginning of the header, case insensitive. All other column are imported as properties.",
+    "Comma, tab or semi-colon separated values. SRS WGS84 is implied. Only Point geometries are imported. The import will look at the column headers for any mention of «lat» and «lon» at the beginning of the header, case insensitive. All other column are imported as properties.": "使用逗號、定位鍵或是分號分隔的地理數據。預設座標系為 SRS WGS84。只會匯入地理座標點。匯入時抓取 «lat» 與 «lon» 開頭的欄位資料，不分大小寫。其他欄位則歸入屬性資料。",
     "Congratulations, your map has been created!": "恭喜您的地圖已經新增完成",
     "Continue line": "連續線段",
     "Coordinates": "座標",
@@ -623,7 +623,7 @@
     "[key=\"value\"][key2=\"value2\"] (eg. [boundary=\"educational\"][name=\"Académie de Lyon\"])": "[key=\"value\"][key2=\"value2\"] (eg. [boundary=\"educational\"][name=\"Académie de Lyon\"])",
     "Field Name": "欄位名稱",
     "Field Type": "欄位類型",
-    "Manage field": "管理篩選",
+    "Manage field": "管理欄位",
     "Add filter for this field": "新增篩選到這一欄位",
     "Name cannot be empty.": "名稱無法是空白的。",
     "Are you sure you want to delete this field on all the data?": "你確定要刪除所有資料當中的這個欄位？",
@@ -639,9 +639,9 @@
     "See on Wikipedia": "在維基百科上檢視",
     "Anonymous map: update who can see and edit it": "暱名地圖，任何人都可以檢視與編輯",
     "Login": "登入",
-    "Manage filters": "Manage filters",
-    "Map (all layers)": "Map (all layers)",
-    "Add a filter for this field": "Add a filter for this field",
+    "Manage filters": "管理篩選",
+    "Map (all layers)": "地圖 (所有圖層)",
+    "Add a filter for this field": "新增篩選到這欄位",
     "Short text": "簡短文字",
     "Text": "文字",
     "Number": "數值",
@@ -650,5 +650,6 @@
     "List of values": "變數列表",
     "Yes / No": "是 / 否",
     "Select field to compute intensity": "選擇欄位運算強度",
-    "Optional intensity field to compute heatmap": "選擇性強度欄位來計算熱力圖"
+    "Optional intensity field to compute heatmap": "選擇性強度欄位來計算熱力圖",
+    "All layers": "All layers"
 }
