--- a/umap/static/umap/locale/da.json
+++ b/umap/static/umap/locale/da.json
@@ -649,6 +649,8 @@
     "Date and time": "Dato og tid",
     "List of values": "Liste over værdier",
     "Yes / No": "Ja / Nej",
-    "Select field to compute intensity": "Select field to compute intensity",
-    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
+    "Select field to compute intensity": "Vælg felt for at beregne intensitet",
+    "Optional intensity field to compute heatmap": "Valgfrit intensitetsfelt til beregning af heatmap",
+    "All layers": "Alle lag",
+    "Comma separated list of values": "Comma separated list of values"
 }
