--- a/umap/static/umap/locale/en.json
+++ b/umap/static/umap/locale/en.json
@@ -651,5 +651,6 @@
     "Yes / No": "Yes / No",
     "Select field to compute intensity": "Select field to compute intensity",
     "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap",
-    "All layers": "All layers"
+    "All layers": "All layers",
+    "Comma separated list of values": "Comma separated list of values"
 }
