--- a/umap/static/umap/locale/fr.json
+++ b/umap/static/umap/locale/fr.json
@@ -651,5 +651,6 @@
     "Yes / No": "Oui / Non",
     "Select field to compute intensity": "Champ pour le calcul d'intensité",
     "Optional intensity field to compute heatmap": "Champ optionnel pour le calcul de l'intensité",
-    "All layers": "Tous les calques"
+    "All layers": "Tous les calques",
+    "Comma separated list of values": "Valeurs séparées par des virgules"
 }
