--- a/umap/static/umap/locale/pl.json
+++ b/umap/static/umap/locale/pl.json
@@ -35,22 +35,22 @@
     "Automatic": "Automatyczny",
     "Autostart when map is loaded": "Autostart po załadowaniu mapy",
     "Back to preview": "Z powrotem do podglądu",
-    "Background overlay url": "Background overlay url",
+    "Background overlay url": "Adres url nakładki tła",
     "Ball": "Pinezka",
     "Bring feature to center": "Przesuń obiekt na środek",
     "Browse data": "Przeglądaj dane",
-    "by": " ",
+    "by": " przez",
     "Cache proxied request": "Zapytanie pośredniczące pamięci podręcznej",
     "Caption": "Podpis",
     "Center map on your location": "Wyśrodkuj mapę na twojej lokalizacji",
     "Change tilelayers": "Zmień podkład",
     "Change": "Zmiana",
     "Choose the data format": "Wybierz format danych",
-    "Choropleth breakpoints": "Choropleth breakpoints",
-    "Choropleth classes": "Choropleth classes",
-    "Choropleth color palette": "Choropleth color palette",
-    "Choropleth mode": "Choropleth mode",
-    "Choropleth property value": "Choropleth property value",
+    "Choropleth breakpoints": "Punkty przerwania kartogramu",
+    "Choropleth classes": "Klasy kartogramu",
+    "Choropleth color palette": "Paleta kolorów kartogramu",
+    "Choropleth mode": "Tryb kartogramu",
+    "Choropleth property value": "Wartość właściwości kartogramu",
     "Choropleth": "Kartogram",
     "Circle": "Kółko",
     "clear": "wyczyść",
@@ -99,7 +99,6 @@
     "Delete this vertex (Alt+Click)": "Usuń ten wierzchołek (Alt+Klik)",
     "Delete": "Usuń",
     "description": "opis",
-    "Direct link": "Bezpośredni link",
     "Directions from here": "Kierunki stąd",
     "Display label": "Wyświetl etykietę",
     "Display measure": "Wyświetl pomiar",
@@ -134,12 +133,11 @@
     "Edit the title of the map": "Edytuj nazwę mapy",
     "Edit this feature": "Edytuj ten obiekt",
     "Edit": "Edytuj",
-    "Embed and link options": "Embed and link options",
-    "Embed the map": "Osadź mapę na stronie",
-    "Emoji & Character": "Emoji & Character",
+    "Embed and link options": "Opcje osadzania i linkowania",
+    "Emoji & Character": "Emoji i Znaki",
     "Empty": "Wyczyść",
-    "Equidistant": "Equidistant",
-    "Error in the overlay URL": "Error in the overlay URL",
+    "Equidistant": "Równoodległy",
+    "Error in the overlay URL": "Błąd w adresie URL nakładki",
     "Error in the tilelayer URL": "Błąd w adresie URL podkładu",
     "Exit Fullscreen": "Zamknij pełny ekran",
     "expanded": "rozwinięty",
@@ -150,7 +148,7 @@
     "fill color": "kolor wypełnienia",
     "fill opacity": "stopień wypełnienia",
     "fill": "wypełnienie",
-    "Fit all data": "Fit all data",
+    "Fit all data": "Dopasuj wszystkie dane",
     "Format": "Format",
     "From zoom": "Od przybliżenia",
     "full backup": "pełna kopia zapasowa",
@@ -295,7 +293,6 @@
     "settings": "ustawienia",
     "Shape properties": "Właściwości kształtu",
     "Share and download": "Udostępnianie i pobieranie",
-    "Share this link to open a customized map view": "Share this link to open a customized map view",
     "Short credits": "Krótkie źródło",
     "Short link": "Krótki link",
     "Show this layer in the caption": "Pokaż tę warstwę w podpisie",
@@ -475,13 +472,13 @@
     "Display the open browser control": "Display the open browser control",
     "Copy as GeoJSON": "Copy as GeoJSON",
     "Please zoom in to edit the geometry": "Please zoom in to edit the geometry",
-    "New map": "New map",
-    "My maps": "My maps",
-    "My teams": "My teams",
-    "My profile": "My profile",
+    "New map": "Nowa mapa",
+    "My maps": "Moje mapy",
+    "My teams": "Moje zespoły",
+    "My profile": "Mój profil",
     "Type new owner's username": "Type new owner's username",
     "Type editor's username": "Type editor's username",
-    "Map": "Map",
+    "Map": "Mapa",
     "Manage collaborators": "Manage collaborators",
     "show/hide all layers": "show/hide all layers",
     "zoom to data extent": "zoom to data extent",
@@ -606,11 +603,11 @@
     "Min/Max": "Min/Max",
     "Multiple choices": "Multiple choices",
     "Exclusive choice": "Exclusive choice",
-    "Yes/No": "Yes/No",
+    "Yes/No": "Tak/Nie",
     "Add a field prior to create a filter.": "Add a field prior to create a filter.",
-    "Edit this filter": "Edit this filter",
-    "Remove this filter": "Remove this filter",
-    "Apply filter to": "Apply filter to",
+    "Edit this filter": "Edytuj filtr",
+    "Remove this filter": "Usuń ten filtr",
+    "Apply filter to": "Zastosuj filtr do",
     "Filter on": "Filter on",
     "Human readable name of the filter": "Human readable name of the filter",
     "Widget for the filter": "Widget for the filter",
@@ -621,35 +618,39 @@
     "unset": "unset",
     "Filters will be displayed in the data browser to ease data selection.": "Filters will be displayed in the data browser to ease data selection.",
     "[key=\"value\"][key2=\"value2\"] (eg. [boundary=\"educational\"][name=\"Académie de Lyon\"])": "[key=\"value\"][key2=\"value2\"] (eg. [boundary=\"educational\"][name=\"Académie de Lyon\"])",
-    "Field Name": "Field Name",
-    "Field Type": "Field Type",
-    "Manage field": "Manage field",
-    "Add filter for this field": "Add filter for this field",
-    "Name cannot be empty.": "Name cannot be empty.",
-    "Are you sure you want to delete this field on all the data?": "Are you sure you want to delete this field on all the data?",
-    "Anonymous map": "Anonymous map",
-    "Edit filter for this field": "Edit filter for this field",
-    "Hey, you created a map without an account!": "Hey, you created a map without an account!",
-    "This map is anonymous, do you want to attach it to your account?": "This map is anonymous, do you want to attach it to your account?",
-    "The map has been upgraded to latest version, please save it.": "The map has been upgraded to latest version, please save it.",
-    "Elevation has been added!": "Elevation has been added!",
+    "Field Name": "Nazwa pola",
+    "Field Type": "Typ pola",
+    "Manage field": "Zarządzaj polem",
+    "Add filter for this field": "Dodaj filtr do tego pola",
+    "Name cannot be empty.": "Nazwa nie może być pusta.",
+    "Are you sure you want to delete this field on all the data?": "Czy na pewno chcesz usunąć to pole ze wszystkich danych?",
+    "Anonymous map": "Anonimowa mapa",
+    "Edit filter for this field": "Edytuj filtr dla tego pola",
+    "Hey, you created a map without an account!": "Hej, stworzyłeś mapę, nie mając konta!",
+    "This map is anonymous, do you want to attach it to your account?": "Ta mapa jest anonimowa. Czy chcesz ją dodać do swojego konta?",
+    "The map has been upgraded to latest version, please save it.": "Mapa została zaktualizowana do najnowszej wersji, proszę ją zapisać.",
+    "Elevation has been added!": "Dodano wysokość!",
     "Mapillary": "Mapillary",
     "Wikidata": "Wikidata",
-    "Wikipedia contributors": "Wikipedia contributors",
-    "See on Wikipedia": "See on Wikipedia",
-    "Anonymous map: update who can see and edit it": "Anonymous map: update who can see and edit it",
+    "Wikipedia contributors": "Współtwórcy Wikipedii",
+    "See on Wikipedia": "Zobacz na Wikipedii",
+    "Anonymous map: update who can see and edit it": "Mapa anonimowa: zaktualizuj, kto może ją widzieć i edytować",
     "Login": "Login",
-    "Manage filters": "Manage filters",
-    "Map (all layers)": "Map (all layers)",
-    "Add a filter for this field": "Add a filter for this field",
-    "Short text": "Short text",
-    "Text": "Text",
-    "Number": "Number",
-    "Date": "Date",
-    "Date and time": "Date and time",
-    "List of values": "List of values",
-    "Yes / No": "Yes / No",
+    "Manage filters": "Zarządzaj filtrami",
+    "Map (all layers)": "Mapa (wszystkie warstwy)",
+    "Add a filter for this field": "Dodaj filtr do tego pola",
+    "Short text": "Krótki tekst",
+    "Text": "Tekst",
+    "Number": "Numer",
+    "Date": "Data",
+    "Date and time": "Data i czas",
+    "List of values": "Lista wartości",
+    "Yes / No": "Tak / Nie",
     "Select field to compute intensity": "Select field to compute intensity",
     "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap",
-    "All layers": "All layers"
+    "All layers": "Wszystkie warstwy",
+    "Comma separated list of values": "Lista wartości oddzielonych przecinkami",
+    "Share": "Share",
+    "Customized link": "Customized link",
+    "Iframe": "Iframe"
 }
