--- a/umap/static/umap/locale/sl.json
+++ b/umap/static/umap/locale/sl.json
@@ -99,7 +99,6 @@
     "Delete this vertex (Alt+Click)": "Izbriši to točko (Alt+Klik)",
     "Delete": "Izbriši",
     "description": "opis",
-    "Direct link": "Direct link",
     "Directions from here": "Navigacija od tu",
     "Display label": "Pokaži oznako",
     "Display measure": "Pokaži merilo",
@@ -135,7 +134,6 @@
     "Edit this feature": "Uredi predmet",
     "Edit": "Uredi",
     "Embed and link options": "Embed and link options",
-    "Embed the map": "Vstavi zemljevid",
     "Emoji & Character": "Emoji & Character",
     "Empty": "Prazno",
     "Equidistant": "Equidistant",
@@ -295,7 +293,6 @@
     "settings": "settings",
     "Shape properties": "Lastnosti oblike",
     "Share and download": "Share and download",
-    "Share this link to open a customized map view": "Share this link to open a customized map view",
     "Short credits": "Kratek zapis zaslug",
     "Short link": "Short link",
     "Show this layer in the caption": "Show this layer in the caption",
@@ -650,5 +647,10 @@
     "List of values": "List of values",
     "Yes / No": "Yes / No",
     "Select field to compute intensity": "Select field to compute intensity",
-    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
+    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap",
+    "All layers": "All layers",
+    "Comma separated list of values": "Comma separated list of values",
+    "Share": "Share",
+    "Customized link": "Customized link",
+    "Iframe": "Iframe"
 }
