--- a/umap/static/umap/locale/uk_UA.json
+++ b/umap/static/umap/locale/uk_UA.json
@@ -99,7 +99,6 @@
     "Delete this vertex (Alt+Click)": "Вилучити цю вершину (Alt+клік)",
     "Delete": "Вилучити",
     "description": "опис",
-    "Direct link": "Direct link",
     "Directions from here": "Маршрут звідси",
     "Display label": "Показувати підписи",
     "Display measure": "Показати вимірювання",
@@ -135,7 +134,6 @@
     "Edit this feature": "Редагувати цей об’єкт",
     "Edit": "Редагувати",
     "Embed and link options": "Embed and link options",
-    "Embed the map": "Вбудувати мапу",
     "Emoji & Character": "Emoji & Character",
     "Empty": "Очистити",
     "Equidistant": "Equidistant",
@@ -295,7 +293,6 @@
     "settings": "settings",
     "Shape properties": "Параметри полігона",
     "Share and download": "Share and download",
-    "Share this link to open a customized map view": "Share this link to open a customized map view",
     "Short credits": "Короткий опис прав/подяки",
     "Short link": "Short link",
     "Show this layer in the caption": "Show this layer in the caption",
@@ -650,5 +647,10 @@
     "List of values": "List of values",
     "Yes / No": "Yes / No",
     "Select field to compute intensity": "Select field to compute intensity",
-    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
+    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap",
+    "All layers": "All layers",
+    "Comma separated list of values": "Comma separated list of values",
+    "Share": "Share",
+    "Customized link": "Customized link",
+    "Iframe": "Iframe"
 }
