--- a/umap/static/umap/locale/de.json
+++ b/umap/static/umap/locale/de.json
@@ -237,7 +237,6 @@
     "No licence has been set": "Keine Lizenz ausgewählt",
     "No results": "Keine Ergebnisse",
     "no": "Nein",
-    "No.": "Nr.",
     "None": "Keine",
     "Number of desired classes (default 5)": "Anzahl der gewünschten Klassen (Standardwert 5)",
     "On the bottom": "An der Unterseite",
@@ -652,5 +651,6 @@
     "Comma separated list of values": "Comma separated list of values",
     "Share": "Share",
     "Customized link": "Customized link",
-    "Iframe": "Iframe"
+    "Iframe": "Iframe",
+    "№": "№"
 }
