--- a/umap/static/umap/locale/en.json
+++ b/umap/static/umap/locale/en.json
@@ -237,7 +237,6 @@
     "No licence has been set": "No licence has been set",
     "No results": "No results",
     "no": "no",
-    "No.": "No.",
     "None": "None",
     "Number of desired classes (default 5)": "Number of desired classes (default 5)",
     "On the bottom": "On the bottom",
@@ -652,5 +651,6 @@
     "Comma separated list of values": "Comma separated list of values",
     "Share": "Share",
     "Customized link": "Customized link",
-    "Iframe": "Iframe"
+    "Iframe": "Iframe",
+    "№": "№"
 }
