--- a/umap/static/umap/locale/nl.json
+++ b/umap/static/umap/locale/nl.json
@@ -237,7 +237,6 @@
     "No licence has been set": "Er is geen licentie ingesteld",
     "No results": "Geen resultaten",
     "no": "neen",
-    "No.": "Neen.",
     "None": "Geen",
     "Number of desired classes (default 5)": "Gewenst aantal klassen (standaard 5)",
     "On the bottom": "Aan de onderkant",
@@ -652,5 +651,6 @@
     "Comma separated list of values": "Comma separated list of values",
     "Share": "Share",
     "Customized link": "Customized link",
-    "Iframe": "Iframe"
+    "Iframe": "Iframe",
+    "№": "№"
 }
