--- a/umap/static/umap/locale/cs_CZ.json
+++ b/umap/static/umap/locale/cs_CZ.json
@@ -237,7 +237,6 @@
     "No licence has been set": "Nebyla nastavena licence",
     "No results": "Žádné výsledky",
     "no": "ne",
-    "No.": "Ne.",
     "None": "Žádný",
     "Number of desired classes (default 5)": "Počet požadovaných tříd (výchozí 5)",
     "On the bottom": "Zespod",
@@ -652,5 +651,6 @@
     "Comma separated list of values": "Comma separated list of values",
     "Share": "Share",
     "Customized link": "Customized link",
-    "Iframe": "Iframe"
+    "Iframe": "Iframe",
+    "№": "№"
 }
