--- a/umap/static/umap/locale/el.json
+++ b/umap/static/umap/locale/el.json
@@ -237,7 +237,6 @@
     "No licence has been set": "Δεν έχει οριστεί άδεια χρήσης",
     "No results": "Δεν υπάρχουν αποτελέσματα",
     "no": "όχι",
-    "No.": "Όχι.",
     "None": "Κανένα",
     "Number of desired classes (default 5)": "Αριθμός επιθυμητών κατηγοριών (προεπιλογή 5)",
     "On the bottom": "Στο κάτω μέρος",
@@ -652,5 +651,6 @@
     "Comma separated list of values": "Comma separated list of values",
     "Share": "Share",
     "Customized link": "Customized link",
-    "Iframe": "Iframe"
+    "Iframe": "Iframe",
+    "№": "№"
 }
