--- a/umap/static/umap/locale/es.json
+++ b/umap/static/umap/locale/es.json
@@ -237,7 +237,6 @@
     "No licence has been set": "No se ha establecido ninguna licencia",
     "No results": "Sin resultados",
     "no": "no",
-    "No.": "Núm.",
     "None": "Ninguno",
     "Number of desired classes (default 5)": "Número de clases deseadas (5 por defecto)",
     "On the bottom": "En la parte inferior",
@@ -650,7 +649,8 @@
     "Optional intensity field to compute heatmap": "Campo de intensidad opcional para calcular el mapa de calor",
     "All layers": "Todas las capas",
     "Comma separated list of values": "Lista de valores separada por comas",
-    "Share": "Share",
-    "Customized link": "Customized link",
-    "Iframe": "Iframe"
+    "Share": "Compartir",
+    "Customized link": "Enlace personalizado",
+    "Iframe": "Iframe",
+    "№": "№"
 }
