--- a/umap/static/umap/locale/et.json
+++ b/umap/static/umap/locale/et.json
@@ -237,7 +237,6 @@
     "No licence has been set": "Litsentsi pole määratud",
     "No results": "Tulemused puuduvad",
     "no": "ei",
-    "No.": "Nr",
     "None": "Mitte midagi",
     "Number of desired classes (default 5)": "Number of desired classes (default 5)",
     "On the bottom": "All",
@@ -652,5 +651,6 @@
     "Comma separated list of values": "Comma separated list of values",
     "Share": "Share",
     "Customized link": "Customized link",
-    "Iframe": "Iframe"
+    "Iframe": "Iframe",
+    "№": "№"
 }
