--- a/umap/static/umap/locale/eu.json
+++ b/umap/static/umap/locale/eu.json
@@ -237,7 +237,6 @@
     "No licence has been set": "Ez da lizentziarik ezarri",
     "No results": "Emaitzarik ez",
     "no": "ez",
-    "No.": "Ez.",
     "None": "Bat ere ez",
     "Number of desired classes (default 5)": "Nahi diren klase kopurua (lehenetsia 5)",
     "On the bottom": "Behean",
@@ -652,5 +651,6 @@
     "Comma separated list of values": "Komaz bereizitako balioen zerrenda",
     "Share": "Share",
     "Customized link": "Customized link",
-    "Iframe": "Iframe"
+    "Iframe": "Iframe",
+    "№": "№"
 }
