--- a/umap/static/umap/locale/fa_IR.json
+++ b/umap/static/umap/locale/fa_IR.json
@@ -237,7 +237,6 @@
     "No licence has been set": "مجوزی تنظیم نشده است",
     "No results": "بی‌نتیجه",
     "no": "نه",
-    "No.": "شمارهٔ",
     "None": "هیچکدام",
     "Number of desired classes (default 5)": "تعداد دسته‌های موردنیاز (پیشفرض 5)",
     "On the bottom": "پایین",
@@ -652,5 +651,6 @@
     "Comma separated list of values": "Comma separated list of values",
     "Share": "Share",
     "Customized link": "Customized link",
-    "Iframe": "Iframe"
+    "Iframe": "Iframe",
+    "№": "№"
 }
