--- a/umap/static/umap/locale/fr.json
+++ b/umap/static/umap/locale/fr.json
@@ -237,7 +237,6 @@
     "No licence has been set": "Aucune licence définie",
     "No results": "Aucun résultat",
     "no": "non",
-    "No.": "Non.",
     "None": "Aucun",
     "Number of desired classes (default 5)": "Nombre désiré de classes (par défaut 5)",
     "On the bottom": "Bas",
@@ -652,5 +651,6 @@
     "Comma separated list of values": "Valeurs séparées par des virgules",
     "Share": "Partager",
     "Customized link": "Lien personnalisé",
-    "Iframe": "Iframe"
+    "Iframe": "Iframe",
+    "№": "№"
 }
