--- a/umap/static/umap/locale/is.json
+++ b/umap/static/umap/locale/is.json
@@ -237,7 +237,6 @@
     "No licence has been set": "Ekkert notkunarleyfi hefur verið sett",
     "No results": "Engar niðurstöður",
     "no": "nei",
-    "No.": "Nr.",
     "None": "Ekkert",
     "Number of desired classes (default 5)": "Number of desired classes (default 5)",
     "On the bottom": "Neðst",
@@ -652,5 +651,6 @@
     "Comma separated list of values": "Comma separated list of values",
     "Share": "Share",
     "Customized link": "Customized link",
-    "Iframe": "Iframe"
+    "Iframe": "Iframe",
+    "№": "№"
 }
