--- a/umap/static/umap/locale/ms.json
+++ b/umap/static/umap/locale/ms.json
@@ -237,7 +237,6 @@
     "No licence has been set": "Tiada lesen ditetapkan",
     "No results": "Tiada hasil",
     "no": "tidak",
-    "No.": "No.",
     "None": "Tiada",
     "Number of desired classes (default 5)": "Jumlah kelas yang diingini (lalainya 5)",
     "On the bottom": "Di bawah",
@@ -652,5 +651,6 @@
     "Comma separated list of values": "Comma separated list of values",
     "Share": "Share",
     "Customized link": "Customized link",
-    "Iframe": "Iframe"
+    "Iframe": "Iframe",
+    "№": "№"
 }
