--- a/umap/static/umap/locale/fr.json
+++ b/umap/static/umap/locale/fr.json
@@ -167,11 +167,11 @@
     "Icon shape": "Forme de l'icône",
     "Icon symbol": "Image de l'icône",
     "If false, the polygon or line will act as a part of the underlying map.": "Désactiver pour que le polygone ou la ligne ne réagisse plus aux interactions.",
-    "Iframe with custom height (in px): {{{https://iframe.url.com|height}}}": "Iframe avec hauteur (en pixels) : {{{https://iframe.url.com|height}}}",
-    "Iframe with custom height and width (in px): {{{https://iframe.url.com|height*width}}}": "Iframe avec hauteur et largeur (en px) : {{{https://iframe.url.com|height*width}}}",
+    "Iframe with custom height (in px): {{{https://iframe.url.com|height}}}": "Iframe avec hauteur (en pixels) : {{{https://iframe.url.com|hauteur}}}",
+    "Iframe with custom height and width (in px): {{{https://iframe.url.com|height*width}}}": "Iframe avec hauteur et largeur (en px) : {{{https://iframe.url.com|hauteur*largeur}}}",
     "iframe": "iframe",
     "Iframe: {{{https://iframe.url.com}}}": "Iframe : {{{https://iframe.url.com}}}",
-    "Image with custom width (in px): {{https://image.url.com|width}}": "Image avec largeur (en pixels) : {{https://image.url.com|width}}",
+    "Image with custom width (in px): {{https://image.url.com|width}}": "Image avec largeur (en pixels) : {{https://image.url.com|largeur}}",
     "Image: {{https://image.url.com}}": "Image : {{https://image.url.com}}",
     "Import data": "Importer des données",
     "Import in a new layer": "Importer dans un nouveau calque",
