--- a/umap/static/umap/locale/zh_TW.json
+++ b/umap/static/umap/locale/zh_TW.json
@@ -648,6 +648,6 @@
     "Comma separated list of values": "逗號分隔清單的值",
     "Share": "分享",
     "Customized link": "自訂連結",
-    "Iframe": "頁面框",
+    "Iframe": "內崁頁面",
     "№": "№"
 }
